--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -49,22 +49,55 @@ h2 {
 }
 
 table.data {
-	width: 100%;
-	cellspacing: 1px;
-	margin: 1em 0;
+    width: 100%;
+    cellspacing: 1px;
+    margin: 1em 0;
 }
 table.data th, table.data td {
-	padding: 4px 6px;
+    padding: 4px 6px;
+    font-size: 1em;
 }
 table.data th {
-	background: #DDD;
-	text-align: left;
-	color: #999;
-	border: 1px solid #CCC;
-	text-shadow: 1px 1px 1px #FFF;
+    background: #DDD;
+    text-align: left;
+    color: #999;
+    border: 1px solid #CCC;
+    text-shadow: 1px 1px 1px #FFF;
 }
 table.data td {
-	background: white;
-	border: 1px solid #DDD;
-	font-size: 0.8em;
+    background: white;
+    border: 1px solid #DDD;
+    text-align: center;
+}
+
+.link {
+    cursor: pointer;
+    text-decoration: underline;
+    color: #1E52A1;
+    float: right;
+    margin-right: 5px;
+}
+
+.pager {
+    margin-top: 30px;
+
+}
+
+.pager input {
+    width: 50px;
+    text-align: center;
+}
+
+table.tablesorter thead tr th, table.tablesorter tfoot tr th{
+    font-size: 10pt !important;
+}
+
+table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
+    background-color: #BAD1DD !important;
+    font-size: 10pt !important;
+}
+
+.pagesize {
+    background-color: #EAE6E0;
+    color: gray;
 }
